--- a/ProniaApp/Views/Shared/_Layout.cshtml
+++ b/ProniaApp/Views/Shared/_Layout.cshtml
@@ -110,13 +110,23 @@
                                                 <i class="pe-7s-users"></i>
                                             </button>
                                             <ul class="dropdown-menu" aria-labelledby="settingButton">
+                                                @if(User.Identity.IsAuthenticated){
+                                                     <li>
+                                                    <a class="dropdown-item" href="my-account.html">@User.Identity.Name</a>
+                                                </li>
                                                 <li>
+                                                    <a asp-action="logout"
+                                                    asp-controller="account" class="dropdown-item" >Logout</a>
+                                                </li>
+                                                }else{
+                                                    <li>
                                                     <a class="dropdown-item" href="my-account.html">My account</a>
                                                 </li>
                                                 <li>
                                                     <a class="dropdown-item" href="login-register.html">Login |
                                                         Register</a>
                                                 </li>
+                                                }
                                             </ul>
                                         </li>
                                         <li class="d-none d-lg-block">
